<resources>
    <string name="app_name">ProyectoSataApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Mis Tickets</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_ticket">TicketActivity</string>
    <string name="creado_por">Creado por</string>
    <string name="asignado_a">Asignado a:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_usuarios">Usuarios</string>
    <string name="title_perfil">Perfil</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_login">LOG IN</string>
    <string name="text_register_help">Don\'t have account?</string>
    <string name="text_register_button">Sign up</string>
    <string name="text_welcome">Welcome Back</string>
    <string name="text_subtitle_login">Sign to continue</string>
    <string name="text_title_register">Let`s Get Started!</string>
    <string name="text_subtitle_register">Create a new account</string>
    <string name="hint_username">Name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_signup">SIGN UP</string>
    <string name="text_login_button">Sign in</string>
    <string name="txBackToSignInHelp">Already have an account?</string>
    <string name="title_activity_detalle_equipo">DetalleEquipoActivity</string>
    <string name="equipo_tipo">Tipo</string>
    <string name="equipo_ubicacion">Ubicacion</string>
    <string name="create_ticket_tv_portada">Crear un nuevo ticket:</string>
    <string name="titulo">Título</string>
    <string name="create_ticket_descripcion">Descripción</string>
    <string name="create_text_boton_subir_imagen">Adjuntar imagen</string>
    <string name="create_ticket_boton_tecnico">Asignar a un técnico</string>
    <string name="create_ticket_boton_equipo">Asignar a un equiipo</string>
    <string name="create_ticket_boton_terminar">Registrar ticket</string>
    <string name="fragment_ticket_por_asignar">Aún por asignar</string>
    <string name="creacion_fecha">"Creado"</string>
    <string name="estado">Estado</string>
    <string name="tecnico">"Tecnico asignado"</string>
    <string name="equipo_nombre">"Nombre del equipo"</string>
    <string name="text_list_no_validated">No Validados</string>
    <string name="text_list_usuarios_validados">Validados</string>
    <string name="title_dialog_borrar">¿Estás seguro que desea borrar?</string>
    <string name="title_dialog_borrar_foto">¿Estás seguro que desea borrar la foto?</string>
    <string name="message_dialog_borrar_foto">Si borra la foto no podrá recuperarla</string>
    <string name="message_dialog_borrar">Esta acción no tiene vuelta atrás</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_actual_password">Tu contraseña</string>
    <string name="hint_confirm_new_password">Nueva contraseña</string>
    <string name="tickets_creados">Tickets creados</string>
    <string name="hint_new_name">Nuevo nombre</string>
</resources>
